--- a/README
+++ b/README
@@ -1,1 +1,13 @@
-# Blee
+<img src="assets/popeye_boat.png">
+
+# Popeye - A Kubernetes manifest and resource linter...
+
+Popeye cruises thru your Kubernetes cluster and identifies potential issues
+with your deployment manifests and configurations.
+
+
+
+---
+
+<img src="assets/imhotep_logo.png" width="32" height="auto"/> © 2018 Imhotep Software LLC.
+All materials licensed under [Apache v2.0](http://www.apache.org/licenses/LICENSE-2.0)
